--- a/tutorial.html
+++ b/tutorial.html
@@ -17,7 +17,7 @@ Above, a Matlab script will automatically be created for you, while you read thi
 <br>
 <center><table><tr><td><img title="The algorithms in this tutorial were developed with partial NIH support." src="nih.jpg">&nbsp;</td><td>&nbsp;<img title="This tutorial is listed in NITRC.org" src="nitrc.jpg">&nbsp;</td><td>&nbsp;<img title="The source code in this tutorial is availble through Matlab Central." src="central.jpg"></td></tr></table></center><br>
 <font size=1 face="Verdana, Arial, Helvetica, sans-serif">
-If you have trouble reading this tutorial <a href="http://research.dwi.ufl.edu/people/angelos/">contact me</a>.<br><br>
+If you have trouble reading this tutorial <a href="https://abarmpou.github.io/angelos">contact me</a>.<br><br>
 The development of the algorithms presented in this tutorial was supported by the NIH grants EB007082 and NS066340 to B. C. Vemuri.
 
 <script type="text/javascript">
