--- a/tutorialb8ed.html
+++ b/tutorialb8ed.html
@@ -50,7 +50,7 @@
 	</head>
 	
 	<body onload="hideAllRows();" bgcolor="#DDDDDD">
-	<font size=2 face="Verdana, Arial, Helvetica, sans-serif">[Citation] A.Barmpoutis, "Tutorial on Diffusion Tensor MRI using Matlab", Electronic Edition, University of Florida, 2010</font><br>
+	<font size=2 face="Verdana, Arial, Helvetica, sans-serif">[Citation] A.Barmpoutis, "Tutorial on Diffusion Tensor MRI using Matlab", Electronic Edition, University of Florida, 2010. Accessed: <script>document.print(new Date().toLocaleDateString())</script> https://abarmpou.github.io/fanDTasia/tutorial.html</font><br>
 	<table><tr><td valign="top">
 	<table><tr><td><img src="tutorial.jpg" width="100px"></td><td>
 	<font size=5 face="Verdana, Arial, Helvetica, sans-serif">Tutorial on Diffusion Tensor MRI using Matlab</font><br><br>
