--- a/tutorialb8ed.html
+++ b/tutorialb8ed.html
@@ -90,7 +90,7 @@
 		<tr id="step1a"><td width="30px"></td><td>
 	
 	<br><font size=2 face="Verdana, Arial, Helvetica, sans-serif">
-	In our experiments we will use the demo DW-MRI dataset of a rat optic chiasm (Reference), which is available to download from <a href="index.html" target="_blank">here</a>. 
+	In our experiments we will use the demo DW-MRI dataset of a rat optic chiasm (E. Ozarslan et al. 2006), which is available to download from <a href="index.html" target="_blank">here</a>. 
 	This dataset is in the simple and generic fanDTasia format (.FDT). More details on the specifications of this file format can be found <a href="helpd61c.html" target="_blank">here</a>.<br><br>
 	
 	After downloading this demo dataset, we can open it in Matlab using the following commands (note that the <a href="http://www.mathworks.com/matlabcentral/fileexchange/?term=authorid%3A89529" target="_blank">fanDTasia Matlab library</a> is required).
@@ -503,10 +503,17 @@
 	</font>
 	</td></tr></table>
 	</td></tr></table>
-	
+
+	<b>Cited References</b><br>
+	<font size=2 face="Verdana, Arial, Helvetica, sans-serif">E. Ozarslan, T. M. Shepherd, B. C. Vemuri, S. J. Blackband, ¨
+and T. H. Mareci. Resolution of complex tissue microarchitecture using the diffusion orientation transform (DOT).
+NeuroImage, 31:1086–1103, 2006.</font>
+		
 	<font size=2 face="Verdana, Arial, Helvetica, sans-serif"><br><br>
 	This tutorial is considered copyrighted intellectual property and should not be copied, re-published or re-posted on a server without the prior written permission from the author. All rights reserved. Angelos Barmpoutis &copy; 2010.<br><br>  
 	[Citation] A.Barmpoutis, "Tutorial on Diffusion Tensor MRI using Matlab", Electronic Edition, University of Florida, 2010</font>
+
+
 	</body>
 	</html>
 	
